Cleaned up content_for :head blocks.

--- a/app/views/layouts/rails_admin/list.html.haml
+++ b/app/views/layouts/rails_admin/list.html.haml
@@ -1,7 +1,5 @@
-- content_for :head do
-  %title
-    = @abstract_model.pretty_name
-    | #{@plugin_name}
+- content_for :title do
+  #{@abstract_model.pretty_name} | #{@plugin_name}
 = render(:partial => 'layouts/rails_admin/head')
 %body
   #wrapper
