--- a/app/views/layouts/rails_admin/_head.html.haml
+++ b/app/views/layouts/rails_admin/_head.html.haml
@@ -1,17 +1,15 @@
 !!! Strict
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
+    %title= yield :title || "#{@page_name} | #{@plugin_name}"
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "NONE,NOARCHIVE", :name => "robots"}/
-    = stylesheet_link_tag('rails_admin/aristo/jquery-ui-1.8.7.custom.css')
-    = stylesheet_link_tag('rails_admin/base')
-    = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", |
-      "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"         |
-    -#
-    = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js", |
-      "/javascripts/rails_admin/jquery-ui-1.8.10.min.js", "!jQuery.ui"                             |
+    = stylesheet_link_tag('rails_admin/aristo/jquery-ui-1.8.7.custom.css', 'rails_admin/base')
+    
+    = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
+    = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js", "/javascripts/rails_admin/jquery-ui-1.8.10.min.js", "!jQuery.ui"
+    
     = javascript_include_tag "rails_admin/rails.js"
     = head_javascript
     = head_style
     = csrf_meta_tag
-    = yield :head
