--- a/app/views/layouts/rails_admin/list.html.haml
+++ b/app/views/layouts/rails_admin/list.html.haml
@@ -18,5 +18,10 @@
     /       \&rsaquo;
     /       %span= @model_config.label
     = render(:partial => 'layouts/rails_admin/header')
-    #content
-      = content_for :layout
+    #wrapper.wat-cf
+      #main
+        = yield
+        #footer
+          %p Rails Admin | 2011
+      = render :partial => "layouts/rails_admin/sidebar"
+      
