Converted remaining views to haml.

--- a/app/views/rails_admin/main/authentication_not_setup.html.haml
+++ b/app/views/rails_admin/main/authentication_not_setup.html.haml
@@ -1,5 +1,3 @@
-<h1>Authentication Not Configured</h1>
-
-<div>
+%h1 Authentication Not Configured
+%div
   Please configure authentication to access this resource.
-</div>
