--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -20,66 +20,75 @@
     \.grid thead #{".#{key}"}{
     width: #{value[:width]}px;
     }
-.ra-block
-  .ui-widget-header
-    = @page_name
-  .ra-block-content
-    = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
-    .ra-block-toolbar.ui-state-highlight
-      %ul
-        %li
-          = link_to(t("admin.history.name"), rails_admin_history_model_path, :class => "ra-button")
-        - if authorized? :new, @abstract_model
-          %li
-            = link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "ra-button")
-      = form_tag(params.reject{|key, value| key.to_sym == :page}, :method => "get", :remote => true) do
-        %fieldset
-          %input{:name => "query", :size => "32", :type => "text", :value => query}/
-          %input.ra-button{:type => "submit", :value => t("admin.list.search").upcase}/
-    = form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do
-      %table.grid
-        %thead
+    
+#block-tables.block
+  .secondary-navigation
+    %ul.wat-cf
+      %li.first.active
+        %a{:href => "#block-text"} Index
+      %li.disabled
+        %a{:href => "#block-tables"} Show
+      %li.disabled
+        %a{:href => "#block-forms"} Edit
+  .content
+    .control
+      = link_to rails_admin_history_model_path, :class => "button" do
+        = t("admin.history.name")
+      - if authorized? :new, @abstract_model
+        = link_to rails_admin_new_path, :class => "button" do
+          %img{:alt => "Add", :src => "/stylesheets/themes/activo/images/icons/add.png"}= t("admin.list.add_new")
+      - if authorized? :delete, @abstract_model
+        %a.button{:href => "#"}
+          %img{:alt => "Remove", :src => "/stylesheets/themes/activo/images/icons/delete.png"}= t("admin.list.delete_selected")
+    %h2.title= @page_name
+    .inner
+      = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
+      = form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do
+        %table.table
           %tr
+            %th.first
+              %input.checkbox.toggle{:type => "checkbox"}
             %th.other.left{ :style => "#{'display: none' if @other.include?("left")}" }...
             - properties.each do |property|
               - property_name = property.name
               - property_pretty_name = property.label
               - selected = sort == property_name.to_s
-              %th{:class => "#{"#{property.css_class}"} #{selected ? "selected" : nil}"}
+              %th{:class => "#{property.css_class} #{selected ? "selected" : nil}"}
                 - if property.sortable?
                   - sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {})
                   - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
                   = link_to(property_pretty_name.upcase, sort_location, :class => sort_direction, :remote => true)
                 - else
                   = property_pretty_name.upcase
-            
             %th.other.right{ :style => "#{'display: none' if @other.include?("right")}" }...
-            %th.action= t("admin.list.edit_action").upcase if authorized? :edit, @abstract_model
-            %th.action= t("admin.list.delete_action").upcase if authorized? :delete, @abstract_model
-            %th.action= t("admin.list.select_action").upcase
-        %tfoot
-          %tr
-            %td{:colspan => properties.length + 5}
-              - if authorized? :delete, @abstract_model
-                = submit_tag t("admin.list.delete_selected"), :class => "ra-button", :style => "float:right;margin-top: 10px;"
-              .pagination
-                - if @page_count.to_i > 1
-                  = paginate(@current_page, @page_count, :url => params).html_safe
-                = @record_count
-                = @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.label.downcase.pluralize : @model_config.label.downcase)
-                - if @page_count.to_i == 2
-                  = link_to(t("admin.list.show_all"), params.merge(:all => true), :remote => true, :class => "showall")
-        %tbody
-          - @objects.each_with_index do |object, index|
-            %tr{:class => index % 2 == 0 ? " odd" : " even"}
-              - other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1)
-              %th.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
-              - properties.map{|property| property.bind(:object, object)}.each do |property|
-                %td{:class => "#{property.css_class}"}= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value
-              - other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1)
-              %th.other.left{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
-              %td.action.edit
-                = link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :edit, @abstract_model, object
-              %td.action.delete
-                = link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :delete, @abstract_model, object
-              %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}"
+            / %th.action= t("admin.list.edit_action").upcase if authorized? :edit, @abstract_model
+            / %th.action= t("admin.list.delete_action").upcase if authorized? :delete, @abstract_model
+            / %th.action= t("admin.list.select_action").upcase
+            - @objects.each_with_index do |object, index|
+              %tr{:class => index % 2 == 0 ? " odd" : " even"}
+                %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}", :class => "checkbox"
+                - other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1)
+                %th.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
+                - properties.map{|property| property.bind(:object, object)}.each do |property|
+                  %td{:class => "#{property.css_class}"}= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value
+                - other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1)
+                %th.other.left{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
+                %td.action.edit
+                  = link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :edit, @abstract_model, object
+                %td.action.delete
+                  = link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :delete, @abstract_model, object
+          
+        .pagination
+          - if @page_count.to_i > 1
+            = paginate(@current_page, @page_count, :url => params).html_safe
+          = @record_count
+          = @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.label.downcase.pluralize : @model_config.label.downcase)
+          - if @page_count.to_i == 2
+            = link_to(t("admin.list.show_all"), params.merge(:all => true), :remote => true, :class => "showall")
+            
+      = form_tag(params.reject{|key, value| key.to_sym == :page}, :method => "get", :remote => true, :class => "search") do
+        .columns.wat-cf
+          .column.right
+            %input#search.search_box{:name => "query", :type => "text", :value => query, :onblur => "if (!value) { value = '#{t("admin.list.search")}' }", :onfocus => "if (value == '#{t("admin.list.search")}') { value = '' }"}
+            %input.search_submit{:type => "submit", :value => ""}
+      .wat-cf
