--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -62,8 +62,7 @@
                   = property_pretty_name.upcase
             %th.other.right{ :style => "#{'display: none' if @other.include?("right")}" }...
             
-            %th.action= t("admin.list.edit_action").upcase   if authorized? :edit, @abstract_model
-            %th.action= t("admin.list.delete_action").upcase if authorized? :delete, @abstract_model
+            %th.last
             
             - @objects.each do |object|
               %tr{:class => cycle("odd", "even")}
@@ -74,10 +73,12 @@
                   %td{:class => "#{property.css_class}"}= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value
                 - other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1)
                 %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
-                %td.action.edit
-                  = link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :edit, @abstract_model, object
-                %td.action.delete
-                  = link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :delete, @abstract_model, object
+                %td.last
+                  = action_icon("#", :show, "Show")   
+                  - if authorized? :edit, @abstract_model, object
+                    = action_icon(rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id), :edit, t("admin.list.edit_action"))                  
+                  - if authorized? :delete, @abstract_model, object
+                    = action_icon(rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id), :cross, t("admin.list.delete_action")) 
           
         .pagination
           - if @page_count.to_i > 1
