--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -5,6 +5,7 @@
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
   properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
+  searchable_properties = @model_config.list.visible_fields
   filters_exist = !properties.select{|property| property.type == :boolean}.empty?
   # columns paginate
   @style, @other, properties = get_column_set(properties)
@@ -52,7 +53,7 @@
                 <em>Over Field(s): </em>
                 <select id="search_fields" name="field">
                   <option value="all">All</option>
-                  <% properties.each do |property| %>
+                  <% searchable_properties.each do |property| %>
                     <% if @current_search_field == property.name %>
                        <option value="<%=property.name %>" selected="selected"><%=property.name %></option>
                     <% else %>
