--- a/app/views/rails_admin/main/_form_datetime.html.erb
+++ b/app/views/rails_admin/main/_form_datetime.html.erb
@@ -1,8 +1,8 @@
-              <div class="field <%= field.to_param %>">
-                <%= label_tag field.to_param, field.label %>
+              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
+                <%= form.label field.name, field.label %>
                 <%= form.send field.view_helper, field.name, field.html_attributes %>
                 <% if field.has_errors? %>
-                <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
+                <span class="errorMessage"><%= "#{field.label} #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
                 <% head_style "rails_admin/jquery.ui.timepicker.css" %>
@@ -10,7 +10,7 @@
                 <% head_javascript "rails_admin/ra.datetimepicker.js" %>
                 <% head_javascript do %>
                   $j(document).ready(function($){
-                    $("#<%= "#{field.to_param}" %>").datetimepicker(<%= field.js_plugin_options.html_safe %>);
+                    $("#<%= "#{form.object_name}_#{field.name}" %>").datetimepicker(<%= field.js_plugin_options.html_safe %>);
                   });
                 <% end %>
               </div>
