--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -1,13 +1,7 @@
 <%
   config = field.associated_model_config
-  name = field.association[:name]
+  selected = field.selected(params)
   xhr = field.associated_collection_count > 100
-
-  if params["associations"]
-    selected = params["associations"][name].to_a.map{|o| o.to_i}
-  else
-    selected = field.bindings[:object].send(name).map{|o| o.id }
-  end
 
   if xhr
     collection = config.abstract_model.get_bulk(selected).map do |o|
@@ -18,19 +12,19 @@
   end
 
 %>
-              <div class="field <%= field.to_param %>">
-                <%= label_tag "associations_#{name}", field.label %>
-                <input type="hidden" name="associations[<%= name  %>][]" />
-                <%= select "associations", name, collection, { :selected => selected }, field.html_attributes %>
+              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
+                <%= form.label field.name, field.label %>
+                <input type="hidden" name="<%= form.object_name %>[<%= field.name  %>][]" />
+                <%= form.select field.name, collection, { :selected => selected }, field.html_attributes %>
                 <% if field.has_errors? %>
-                <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
+                <span class="errorMessage"><%= "#{field.label} #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
-                <% head_style('rails_admin/ra.filtering-multiselect.css') %>
+                <% head_style 'rails_admin/ra.filtering-multiselect.css' %>
                 <% head_javascript "rails_admin/ra.filtering-multiselect.js" %>
                 <% head_javascript do %>
                   $j(document).ready(function($){
-                    $("#<%= "associations_#{name}" %>").filteringMultiselect({
+                    $("#<%= "#{form.object_name}_#{field.name}" %>").filteringMultiselect({
                       <% if xhr %>
                         createQuery: function(query) {
                           return { filter: { '<%= field.associated_label_method %>': query + '%' } }
