--- a/app/views/rails_admin/main/_form_filtering_select.html
+++ b/app/views/rails_admin/main/_form_filtering_select.html
@@ -1,17 +1,12 @@
 <%
   collection = field.associated_collection.sort_by{|object| object.first.to_s }
-  selected = field.bindings[:object].send(field.child_key)
-
-  if selected.nil? && params["associations"]
-    selected = params["associations"][field.child_key.to_param.pluralize].to_i
-  end
-
+  selected = field.selected(params)
   model_name = field.abstract_model.to_param
   associated_model = field.associated_model_config
   associated_model_name = associated_model.abstract_model.to_param
 %>
-              <div class="field <%= field.to_param %>">
-                <%= label_tag field.to_param, field.label %>
+              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
+                <%= form.label field.name, field.label %>
                 <%= form.select field.name, collection, {:include_blank => true, :selected => selected}, field.html_attributes %>
                 <% if authorized? :new, @abstract_model %>
                   <%= link_to "Add new #{associated_model_name}", rails_admin_new_path(:model_name => associated_model_name ), :class => "createAssociatedRecord" %>
@@ -20,9 +15,11 @@
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
-                <%= javascript_tag do %>
+                <% head_style 'rails_admin/ra.filtering-select.css' %>
+                <% head_javascript "rails_admin/ra.filtering-select.js" %>
+                <% head_javascript do %>
                   $j(document).ready(function($){
-                    $(".createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
+                    $("#<%= "#{form.object_name}_#{field.name}" %>").filteringSelect({});
                   });
                 <% end %>
               </div>
