--- a/app/views/rails_admin/main/_form_paperclip_file.html.erb
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.erb
@@ -1,5 +1,5 @@
-              <div class="field <%= field.to_param %>">
-                <%= label_tag field.to_param, field.label %>
+              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
+                <%= form.label field.name, field.label %>
                 <div class="input">
                   <% if field.bindings[:object].send(field.name).file? %>
                     <div class="row">
@@ -11,7 +11,7 @@
                   </div>
                 </div>
                 <% if field.has_errors? %>
-                <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
+                <span class="errorMessage"><%= "#{field.label} #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
               </div>
