--- a/app/views/rails_admin/main/_form_text.html.erb
+++ b/app/views/rails_admin/main/_form_text.html.erb
@@ -1,8 +1,8 @@
-              <div class="field <%= field.to_param %>">
-                <%= label_tag field.to_param, field.label %>
+              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
+                <%= form.label field.name, field.label %>
                 <%= form.send field.view_helper, field.name, field.html_attributes %>
                 <% if field.has_errors? %>
-                <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
+                <span class="errorMessage"><%= "#{field.label} #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
                 <% if field.ckeditor %>
@@ -12,7 +12,7 @@
                       alert("Install CKEditor using rake admin:ckeditor_download");
                     <% end %>
                     $j(document).ready(function($){
-                      CKEDITOR.replace('<%= "#{field.to_param}" %>',
+                      CKEDITOR.replace('<%= "#{form.object_name}_#{field.name}" %>',
                         {
                           customConfig : '<%= field.ckeditor_config_js %>'
                         }
