--- a/app/views/layouts/rails_admin/dashboard.html.erb
+++ b/app/views/layouts/rails_admin/dashboard.html.erb
@@ -5,7 +5,7 @@
 <body>
   <div id="wrapper">
     <% content_for :breadcrumb do %>
-      <li><%= link_to(t('home.name'), root_path) %></li>
+      <li><%= t('home.name') %></li>
       <li>&rsaquo; <span><%= t('admin.dashboard.name') %></span></li>
     <% end %>
     <%= render(:partial => 'layouts/rails_admin/header') %>
