Re-apply grid th padding removed in db03faaa072564a6174559ba9d64ffbff43efb1f, but only for the sorted column. Without padding the sorting icon renders behind text.

--- a/public/stylesheets/rails_admin/list.css
+++ b/public/stylesheets/rails_admin/list.css
@@ -17,6 +17,10 @@
   color:#000;
 }
 
+.grid thead th.selected a {
+  padding: 0 20px 0 0;
+}
+
 .grid thead th a.ascending {
   background-image: url(../../images/rails_admin/bullet_arrow_up.png);
 }
