--- a/app/views/rails_admin/main/authentication_not_setup.html.erb
+++ b/app/views/rails_admin/main/authentication_not_setup.html.erb
@@ -1,3 +1,5 @@
-%h1 Authentication Not Configured
-%div
+<h1>Authentication Not Configured</h1>
+
+<div>
   Please configure authentication to access this resource.
+</div>
