--- a/app/views/rails_admin/main/_form_filtering_select.html
+++ b/app/views/rails_admin/main/_form_filtering_select.html
@@ -1,16 +1,21 @@
 <%
-  collection = field.associated_collection.sort_by{|object| object.first.to_s }
+  config = field.associated_model_config
   selected = field.selected(params)
-  model_name = field.abstract_model.to_param
-  associated_model = field.associated_model_config
-  associated_model_name = associated_model.abstract_model.to_param
+  xhr = field.associated_collection_count > 100
+
+  if xhr
+    collection = [[field.formatted_value, selected]]
+  else
+    collection = field.associated_collection.sort_by{|object| object.first.to_s}
+  end
+
 %>
               <div class="field <%= "#{form.object_name}_#{field.name}" %>">
                 <%= form.label field.name, field.label %>
                 <%= form.select field.name, collection, {:include_blank => true, :selected => selected}, field.html_attributes %>
                 <% if authorized? :new, @abstract_model %>
-                  <%= link_to "Add new #{associated_model_name}", rails_admin_new_path(:model_name => associated_model_name ), :class => "createAssociatedRecord" %>
-                <% end %>  
+                  <%= link_to "Add new #{config.abstract_model.to_param}", rails_admin_new_path(:model_name => config.abstract_model.to_param ), :class => "createAssociatedRecord" %>
+                <% end %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
@@ -19,7 +24,15 @@
                 <% head_javascript "rails_admin/ra.filtering-select.js" %>
                 <% head_javascript do %>
                   $j(document).ready(function($){
-                    $("#<%= "#{form.object_name}_#{field.name}" %>").filteringSelect({});
+                    $(".<%= "#{form.object_name}_#{field.name}" %> .createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
+                    $("#<%= "#{form.object_name}_#{field.name}" %>").filteringSelect({
+                      <% if xhr %>
+                        createQuery: function(query) {
+                          return { filter: { '<%= field.associated_label_method %>': query + '%' } }
+                        },
+                        source: "<%= rails_admin_list_path(config.abstract_model.to_param, :compact => true) %>"
+                      <% end %>
+                    });
                   });
                 <% end %>
               </div>
