search and filter are basically working

--- a/public/stylesheets/rails_admin/base.css
+++ b/public/stylesheets/rails_admin/base.css
@@ -340,3 +340,13 @@ ul.items li a {
 ul.items li a:hover {
   text-decoration: none;
 }
+
+div.search {
+   margin: 5px;
+}
+
+div.search label.main_label {
+display:inline-block;
+width:80px;
+ 
+}
