Lots of fixes for filters and searches

--- a/app/views/rails_admin/main/_filter.html.erb
+++ b/app/views/rails_admin/main/_filter.html.erb
@@ -1,7 +1,9 @@
+<% current_value = params[:filter] && params[:filter][filter[:key]] %>
+
 <select name="filter[<%=filter[:key]%>]">
-  <option value="">None Selected</option>
+  <option value="">[ <%= filter[:key] %> ]</option>
   <% filter[:values].each_with_index do |v,i| %>
-    <option value=<%=v%>><%= filter[:display_values][i] %></option>
+    <option <%= 'selected="selected"' if !v.blank? && v == current_value  %> value="<%=v%>"><%= filter[:display_values][i] %></option>
   <% end %>
 </select>
 
