--- a/app/views/rails_admin/main/_search_datetime.html.erb
+++ b/app/views/rails_admin/main/_search_datetime.html.erb
@@ -1,9 +1,9 @@
- <div class="search field <%= field.to_param %>">
-   <%= label_tag field.label , nil ,{:class => "main_label" } %>
+ <div class="search field search_<%= field.name %>">
+   <%= label_tag field.label , field.name ,{:class => "main_label" } %>
       
    <span class="date">
         <label>Between: </label>
-        <input class="datepicker" type="text" name="query[<%=field.name%>][from]" size="32" />
+        <input id="<%= field.name %>" class="datepicker" type="text" name="query[<%=field.name%>][from]" size="32" />
       </span>
       <span class="date">
         <label>and:</label>
