--- a/app/views/rails_admin/main/_search_string.html.erb
+++ b/app/views/rails_admin/main/_search_string.html.erb
@@ -1,4 +1,4 @@
-      <div class="search field <%= field.to_param %>">
-          <%= label_tag field.to_param, field.label, {:class => "main_label" }   %>
-          <input type="text" name="query[<%=field.name%>]" value="<%= query[field.name] unless query.nil? %>" size="32" />
+      <div class="search field search_<%= field.name %>">
+          <%= label_tag field.name, field.label, {:class => "main_label" }   %>
+          <input id="<%= field.name %>" type="text" name="query[<%=field.name%>]" value="<%= query[field.name] unless query.nil? %>" size="32" />
       </div>
