--- a/app/views/rails_admin/main/_search_text.html.erb
+++ b/app/views/rails_admin/main/_search_text.html.erb
@@ -1,5 +1,5 @@
-      <div class="search field <%= field.to_param %>">
-          <%= label_tag field.to_param, field.label %>
-          <input type="text" name="query" value="<%= query %>" size="32" />
+      <div class="search field search_<%= field.name %>">
+          <%= label_tag field.name, field.label %>
+          <input id="<%= field.name %>" type="text" name="query" value="<%= query %>" size="32" />
           <input type="hidden" name="query_type" value=<%=field.name%> />
       </div>
