--- a/app/views/rails_admin/main/_form_polymorphic_association.html.erb
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.erb
@@ -23,9 +23,9 @@
                 <%= javascript_tag do %>
                   $j(document).ready(function($) {
                     var urls = <%= field.polymorphic_type_urls.to_json.html_safe %>;
-                    $("#<%= "#{model_name}_#{type_column}" %>").bind("change", function(e) {
+                    $("#<%= "#{form.object_name}_#{type_column}" %>").bind("change", function(e) {
                       if ("" == $(this).val()) {
-                        $("#<%= "#{model_name}_#{field.name}" %>").html('<option value=""></option>');
+                        $("#<%= "#{form.object_name}_#{field.name}" %>").html('<option value=""></option>');
                       } else {
                         $.ajax({
                           url: urls[$(this).val()],
