--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -23,13 +23,13 @@
                 <% head_style 'rails_admin/ra.filtering-multiselect.css' %>
                 <% head_javascript "rails_admin/ra.filtering-multiselect.js" %>
                 <% head_javascript do %>
-                  $j(document).ready(function($){
-                    $("#<%= "#{form.object_name}_#{field.name}" %>").filteringMultiselect({
+                  $j(document).ready(function($) {
+                    $("#<%= "associations_#{field.name}" %>").filteringMultiselect({
                       <% if xhr %>
                         createQuery: function(query) {
                           return { query: query }
                         },
-                        source: "<%= rails_admin_list_path(config.abstract_model.to_param, :compact => true, :all => true) %>"
+                        source: "<%= rails_admin_list_path(config.abstract_model.to_param, :compact => true, :all => true) %>",
                       <% end %>
                       regional: {
                         chooseAll: "<%= t("admin.new.chose_all") %>",
