--- a/app/views/layouts/rails_admin/delete.html.haml
+++ b/app/views/layouts/rails_admin/delete.html.haml
@@ -1,15 +1,10 @@
 = render(:partial => 'layouts/rails_admin/head')
 %body
-  #wrapper
-    - content_for :breadcrumb do
-      %li= link_to(t('home.name'), '/')
-      %li
-        \&rsaquo; #{link_to(t('admin.dashboard.name'), rails_admin_dashboard_path)}
-      %li
-        \&rsaquo; #{link_to(@model_config.label, rails_admin_list_path(:model_name => @abstract_model.to_param))}
-      %li
-        \&rsaquo;
-        %span= @page_name
+  #container
     = render(:partial => 'layouts/rails_admin/header')
-    #content
-      = yield
+    #wrapper.wat-cf
+      #main
+        = yield
+        #footer
+          %p Rails Admin | 2011
+      = render :partial => "layouts/rails_admin/sidebar"
