--- a/app/views/rails_admin/main/_form_colorpicker.html.erb
+++ b/app/views/rails_admin/main/_form_colorpicker.html.erb
@@ -1,7 +1,7 @@
-              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
-                <%= form.label field.name, field.label %>
+            <div class="field <%= field.dom_id %>">
+                <%= form.label field.method_name, field.label %>
                 <%= form.send field.view_helper, field.name, field.html_attributes %>
-                <div id="<%= "#{form.object_name}_#{field.name}" %>Helper" class="colorSelector"><div></div></div>
+                <div id="<%= field.dom_id %>Helper" class="colorSelector"><div></div></div>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
@@ -10,9 +10,9 @@
 	            <% head_javascript "rails_admin/jquery.colorpicker.js" %>
                 <% head_javascript do %>
                   $j(document).ready(function($){
-                    var input = $('#<%= "#{form.object_name}_#{field.name}" %>').hide();
-                    $('#<%= "#{form.object_name}_#{field.name}" %>Helper div').css('backgroundColor', '#' + input.val());
-					$('#<%= "#{form.object_name}_#{field.name}" %>Helper').ColorPicker({
+                    var input = $('#<%= field.dom_id %>').hide();
+                    $('#<%= field.dom_id %>Helper div').css('backgroundColor', '#' + input.val());
+					$('#<%= field.dom_id %>Helper').ColorPicker({
 					  color: input.val(),
 					  onShow: function (el) {
 					    $(el).fadeIn(500);
@@ -24,7 +24,7 @@
 					  },
 					  onChange: function (hsb, hex, rgb) {
 					    input.val(hex);
-					    $('#<%= "#{form.object_name}_#{field.name}" %>Helper div').css('backgroundColor', '#' + hex);
+					    $('#<%= field.dom_id %>Helper div').css('backgroundColor', '#' + hex);
 					  }
 					});
                   });
