--- a/app/views/rails_admin/main/_form_field.html.erb
+++ b/app/views/rails_admin/main/_form_field.html.erb
@@ -1,5 +1,5 @@
-              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
-                <%= form.label field.name, field.label %>
+              <div class="field <%= field.dom_id %>">
+                <%= form.label field.method_name, field.label %>
                 <%= form.send field.view_helper, field.name, field.html_attributes %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
