--- a/app/views/rails_admin/main/_form_paperclip_file.html.erb
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.erb
@@ -1,13 +1,13 @@
-              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
-                <%= form.label field.name, field.label %>
+              <div class="field <%= field.dom_id %>">
+                <%= form.label field.method_name, field.label %>
                 <div class="input">
-                  <% if field.bindings[:object].send(field.name).file? %>
+                  <% if field.bindings[:object].send(field.method_name).file? %>
                     <div class="row">
-                      <%= image_tag(field.bindings[:object].send(field.name).url) %><br />
+                      <%= image_tag(field.bindings[:object].send(field.method_name).url) %><br />
                     </div>
                   <% end %>
                   <div class="row">
-                    <%= form.file_field(field.name, field.html_attributes) %>
+                    <%= form.file_field(field.method_name, field.html_attributes) %>
                   </div>
                 </div>
                 <% if field.has_errors? %>
