--- a/app/views/rails_admin/main/_form_polymorphic_association.html.erb
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.erb
@@ -10,22 +10,27 @@
     collection = field.associated_collection(selected_type)
   end
 
-  selected = field.selected(params)
+  selected = field.bindings[:object].send(field.association[:name])
+  column_type_dom_id = field.dom_id.sub(field.method_name, type_column) 
 %>
-              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
-                <%= form.label field.name, field.label %>
-                <%= form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :class => "#{field.has_errors? ? "errorField" : nil}" %>
-                <%= form.select field.name, collection, {:include_blank => true, :selected => selected}, :class => "#{field.has_errors? ? "errorField" : nil}", :style => "margin-left:10px;" %>
+              <div class="field <%= field.dom_id %>">
+                <%= form.label field.method_name, field.label %>
+                <%= form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, 
+                  :class => "#{field.has_errors? ? "errorField" : nil}", :id => column_type_dom_id %>
+                <%= form.select field.method_name, collection, {:include_blank => true, :selected => selected.try(:id)}, :class => "#{field.has_errors? ? "errorField" : nil}", :style => "margin-left:10px;" %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
+                <% head_style 'rails_admin/ra.filtering-select.css' %>
+                <% head_javascript "rails_admin/ra.filtering-select.js" %>
+
                 <%= javascript_tag do %>
                   $j(document).ready(function($) {
                     var urls = <%= field.polymorphic_type_urls.to_json.html_safe %>;
-                    $("#<%= "#{form.object_name}_#{type_column}" %>").bind("change", function(e){
+                    $("#<%= column_type_dom_id %>").bind("change", function(e){
                       if ("" == $(this).val()) {
-                        $("#<%= "#{form.object_name}_#{field.name}" %>").html('<option value=""></option>');  
+                        $("#<%= field.dom_id %>").html('<option value=""></option>');  
                       } else {
                         $.ajax({
                           url: urls[$(this).val()],
@@ -38,11 +43,13 @@
                             $(data).each(function(i, el) {
                               html += '<option value="' + el.id + '">' + el.label + '</option>';
                             });
-                            $("#<%= "#{form.object_name}_#{field.name}" %>").html(html);
+                            $("#<%= field.dom_id %>").html(html);
                           }
                         });
                       }
                     });
                   });
                 <% end %>
+
+                
               </div>
