--- a/app/views/rails_admin/main/_form_text.html.erb
+++ b/app/views/rails_admin/main/_form_text.html.erb
@@ -1,6 +1,6 @@
-              <div class="field <%= "#{form.object_name}_#{field.name}" %>">
-                <%= form.label field.name, field.label %>
-                <%= form.send field.view_helper, field.name, field.html_attributes %>
+              <div class="field <%= field.dom_id %>">
+                <%= form.label field.method_name, field.label %>
+                <%= form.send field.view_helper, field.method_name, field.html_attributes %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label} #{field.errors.first}" %></span>
                 <% end %>
@@ -12,7 +12,7 @@
                       alert("Install CKEditor using rake admin:ckeditor_download");
                     <% end %>
                     $j(document).ready(function($){
-                      CKEDITOR.replace('<%= "#{form.object_name}_#{field.name}" %>',
+                      CKEDITOR.replace('<%= field.dom_id %>',
                         {
                           customConfig : '<%= field.ckeditor_config_js %>'
                         }
